# fastapi-template-app

./: .pre-commit-config.yaml  README.md  compose.base.yml  compose.dev.yml  compose.prod.yml  docker-compose.yml  index.html  run_precommit.sh
.devcontainer/: devcontainer.json
app/: alembic_upgrade.sh  pyproject.toml  start_app.sh  start_app_dev.sh
app/src/: alembic.ini  config.py  logger.py  main.py
app/src/api/: dependencies.py
app/src/api/endpoints/: tasks.py
app/src/core/: database.py  logger.py
app/src/cruds/: __init__.py  crud_tasks.py
app/src/extensions/: api_exception.py  error_msgs.py  exception_handlers.py
app/src/migration/: env.py
app/src/migration/versions/: 40661a7034ad_update_tables.py  794fc0a0c5b0_create_user_table.py  af4845b9de6a_update_task_table.py  c99e5dba3f6a_create_tables.py
app/src/models/: __init__.py  base.py  task.py  user.py
app/src/repositories/: base.py  task.py
app/src/schemas/: base.py  task.py
app/src/services/: task.py
app/src/tests/: conftest.py  test_main.py  test_ping.py
app/src/tests/tasks/: conftest.py  test_api.py
docker/python/: Dockerfile
